--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,15 @@
       "homepage": "https://springsignage.com"
     }
   ],
+   "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/helloadmin/oauth2-xibo-cms.git"
+        }
+    ],
+      "require": {
+        "helloadmin/oauth2-xibo-cms": "dev-develop"
+    }
   "require": {
     "php": ">=5.6.0",
     "league/oauth2-client": "2.4.*",
