--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,13 @@
       "homepage": "https://springsignage.com"
     }
   ],
-  "require": {
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/helloadmin/oauth2-xibo-cms.git"
+        }
+    ],  
+    "require": {
     "php": ">=5.6.0",
     "league/oauth2-client": "2.4.*",
     "psr/log": "1.1.*"
